# robot-manipulation

./: .gitmodules  README.md
youbot_orocos_kdl/: CMakeLists.txt  package.xml
youbot_orocos_kdl/config/: fk.rviz  forward_kinematics.yaml  joint_angles.yaml
youbot_orocos_kdl/include/youbot_orocos_kdl/: forward_kinamatics.h
youbot_orocos_kdl/launch/: forward_kinematics.launch  upload_param.launch
youbot_orocos_kdl/src/: forward_kinematics.cpp
