<?xml version="1.0"?>
<package format="2">
  <name>youbot_orocos_kdl</name>
  <version>0.0.0</version>
  <description>The youbot_orocos_kdl package</description>

  <maintainer email="vamsikalagaturu@gmail.com">vamsi</maintainer>
  <license>TODO</license>
  <author email="vamsikalagaturu@gmail.com">vamsi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>eigen3</build_depend>
  <build_depend>kdl</build_depend>
  <build_depend>kdl_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>youbot_description</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>kdl</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>eigen3</exec_depend>
  <exec_depend>kdl_conversions</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>

</package>
